k8s/film-locations.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: film-locations-deployment
  labels:
    app: film-locations
spec:
  replicas: 3
  selector:
    matchLabels:
      app: film-locations
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 3
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: film-locations
    spec:
      containers:
        - image: gcr.io/filmlocations/film-locations:1.4.0
          imagePullPolicy: Always
          name: film-locations
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 60
      restartPolicy: Always
