k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:5.0
          name: redis
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 25m
              memory: 500M
