k8s/film-locations-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: film-locations-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: film-locations
