k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
