k8s/film-locations-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: film-locations-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - moviemap.io
      secretName: film-locations-tls
  rules:
    - host: moviemap.io
      http:
        paths:
          - path: /
            backend:
              serviceName: film-locations-service
              servicePort: 8080
